polyglot/iac/kind-spin/barista-api-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: barista-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: barista-api
  template:
    metadata:
      labels:
        app: barista-api
      annotations:
        dapr.io/enabled: "true"
        dapr.io/app-id: "barista-api"
        dapr.io/app-port: "80"
        dapr.io/enable-api-logging: "true"
    spec:
      runtimeClassName: wasmtime-spin
      containers:
        - name: barista-api
          image: ghcr.io/thangchung/dapr-labs/barista-api-spin:1.0.0
          # imagePullPolicy: Always
          command: ["/"]
          resources: # limit the resources to 128Mi of memory and 100m of CPU
            limits:
              cpu: 100m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: barista-api
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 5003
      targetPort: 80
  selector:
    app: barista-api
